--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
-* linguist-vendored
-*.js linguist-vendored=false
+*.Rdata text
+*.rdb   binary
+*.rds   binary
+*.Rd    text
+*.Rdx   binary
+*.Rmd	text
+*.R  	text
