--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,7 @@
-*.rb linguist-language=R
-*.Rdata text
-*.rdb   binary
-*.rds   binary
-*.Rd    text
-*.Rdx   binary
-*.Rmd	text
-*.R  	text
+*.Rdata linguist-language=R
+*.rdb   linguist-language=R
+*.rds   linguist-language=R
+*.Rd    linguist-language=R
+*.Rdx   linguist-language=R
+*.Rmd	linguist-language=R
+*.R  	linguist-language=R
