--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,2 @@
-*.Rdata linguist-language=R
-*.rdb   linguist-language=R
-*.rds   linguist-language=R
-*.Rd    linguist-language=R
-*.Rdx   linguist-language=R
-*.Rmd	linguist-language=R
-*.R  	linguist-language=R
+# to change language of repo from HTML to R
+    *.html linguist-language=R
